fixed few bug on mobile-menu,footer, added social-links for Footer

--- a/src/components/categories/Categories.scss
+++ b/src/components/categories/Categories.scss
@@ -60,11 +60,12 @@
 
 .categories-header {
   font-weight: 500;
+  padding: 0 1.5rem;
 }
 
 .categories-list {
   list-style-type: none;
-  padding: 0 1rem;
+  padding: 0 2rem;
 
   li {
     margin-bottom: 1rem;
