--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -15,6 +15,10 @@
     padding: 1rem var(--container-padding);
   }
 
+  .store-logo {
+    cursor: pointer;
+  }
+
   .nav-item {
     width: 25px;
     margin: 0 1rem;
