--- a/src/components/search-bar/SearchBar.scss
+++ b/src/components/search-bar/SearchBar.scss
@@ -36,7 +36,7 @@
   button {
     position: absolute;
     left: 2rem;
-    width: 1.6rem;
+    width: 1.8rem;
     background-color: transparent;
     border: none;
 
